# tox-ignore-env-name-mismatch

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: test.yml
examples/: pyproject.toml  tox.ini
examples/src/: examples_foo.py
examples/tests/: test_examples_foo.py
src/: tox_ignore_env_name_mismatch.py
tests/integration/: test_end_to_end.py
tests/unit/: test_ignore_env_name_mismatch.py
